sidebar on tablet: fix positioning funders: add CTA

--- a/themes/hugo-bulma-blocks-theme/assets/sass/bulma/components/sidebar.sass
+++ b/themes/hugo-bulma-blocks-theme/assets/sass/bulma/components/sidebar.sass
@@ -88,6 +88,9 @@
         margin: 0
 
 @media screen and (max-width: 1023px)
+    .content
+        >.columns >.is-3
+            padding: 0
     .sidebar
         background: #fff
         border-radius: 10px
@@ -110,6 +113,7 @@
         position: relative
         z-index: 3
         border-radius: 10px
+        margin-left: 0.75rem
         max-width: fit-content
 
         &.open
