--- a/themes/hugo-bulma-blocks-theme/assets/sass/style.sass
+++ b/themes/hugo-bulma-blocks-theme/assets/sass/style.sass
@@ -21,6 +21,13 @@ h2
   @media screen and (max-width: 768px)
     font-size: 2.25rem
 
+@media screen and (max-width: 1024px)
+  .content
+    >.columns
+      display: block
+      .content 
+        width: 100%
+
 .alpha70
   opacity: 70%
 
